--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
     "@astrojs/check": "^0.4.1",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/dm-sans": "^5.0.3",
-    "astro": "^5.13.7",
-    "rollup": "^4.50.1",
+    "astro": "^4.1.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "vite": "^7.1.5"
+    "typescript": "^5.3.3"
   }
 }
